Fix date dateTimePicker clipping when adding lunch

--- a/web/resources/css/staffstyle.css
+++ b/web/resources/css/staffstyle.css
@@ -11,3 +11,11 @@
 
     width: 100%;
 }
+
+.staff-dialog {
+    overflow: visible;
+}
+
+.staff-dialog > .ui-dialog-content {
+    overflow: visible;
+}
